--- a/fase2/design.html
+++ b/fase2/design.html
@@ -48,8 +48,8 @@
 
             <article>
                 <h4>Etiquetas Semánticas</h4>
-                <img src="img/Etiquetas semanticas.jpg" alt="Imagén donde se observa varias eiquetas que se utilizan en l lenguaje HTML5">
-                <img src="img/Etiquetas semanticas.jpg" alt="Imagén donde se observa varias eiquetas que se utilizan en el lenguaje HTML5">
+                <img src="imgs/Etiquetas semanticas.jpg" alt="Imagén donde se observa varias eiquetas que se utilizan en l lenguaje HTML5">
+                <img src="imgs/Etiquetas semanticas.jpg" alt="Imagén donde se observa varias eiquetas que se utilizan en el lenguaje HTML5">
                 <p>
                     En los nuevos estándares de la utilización del leguaje HTML5, para la creación de páginas más accesibles para todo el público, por esto ha incluido
                     las etiquetas semánticas con el fin de hacer más sencillo el código a la hora de ser presentado, en decir que estás servirán para dividir un documento
@@ -68,8 +68,8 @@
 
             <article> 
                 <h4>CSS Grid</h4>
-                <img src="img/CSSGRID.png" alt="Imagén donde se observa la como este propgrama nos divide en cuadriculas la pantalla">
-                <img src="img/CSSGRID.png" alt="Imagén donde se observa como este programa nos divide en cuadriculas la pantalla">
+                <img src="imgs/CSSGRID.png" alt="Imagén donde se observa la como este propgrama nos divide en cuadriculas la pantalla">
+                <img src="imgs/CSSGRID.png" alt="Imagén donde se observa como este programa nos divide en cuadriculas la pantalla">
                 <p>
                     Como es conocido el CSS en un lenguaje que se integra con HTML5, en este caso el CSS Grid es un sistema de diseño web que no ayuda a dividir la pagina en una cuadricula, por lo cual nos ayuda a distribuir los elementos en una forma más sencilla.    
                     Como es conocido el CSS en un lenguaje que se integra con HTML5, en este caso el CSS Grid es un sistema de diseño web que no ayuda a dividir la pagina en una cuadricula, por lo cual nos ayuda a distribuir los elementos en una forma más sencilla. Sus múltiples ventajas, ayudan a que cualquier navegador soporte su código, esta ayuda que a facilitar el trabajo utilizando menos códigos, con lo que ayuda a optimizar tiempo y recursos, también nos ayuda a crear elementos más dinámicos que se adaptan a diferentes tamaños y resoluciones. 
@@ -82,7 +82,7 @@
     </main>
     <hr>
     <h2>Presentación Mockup</h2>
-    <img src="img/mockup.JPG" alt="Imagén que muestra diseño de Mockup con encabezado, barra de navegación, cuerpo, pie de página">
+    <img src="imgs/mockup.JPG" alt="Imagén que muestra diseño de Mockup con encabezado, barra de navegación, cuerpo, pie de página">
     <br>
     <hr>
     <footer>
