--- a/index.html
+++ b/index.html
@@ -24,7 +24,8 @@
     </p>
 
     <p> Enlaces a las fases. <br>
-        <a href="fase2\design.html">Fase 2 </a>
+        <a href="fase2\design.html">Fase 2 </a><br>
+        <a href="fase3\index.html">Fase 3</a>
     </p>
     <hr>
 
