--- a/fase3/recurso2.html
+++ b/fase3/recurso2.html
@@ -6,7 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Recurso 2</title>
-    <link rel="stylesheet" href="css/estilo.css">
+    <link rel="stylesheet" href="css/styles.css">
 </head>
 
 <body>
@@ -59,7 +59,7 @@
                 <h5>Audio explicativo CSS Grid</h5>
                 <img src="img/CSSGRID.png" width="250" height="200" alt="">
                 <br>
-                <audio src="aca coloca el audio" controls></audio>
+                <audio src="audios/Grabación.m4a" controls></audio>
 
             </article>
         </section>
