--- a/fase3/tema2.html
+++ b/fase3/tema2.html
@@ -47,15 +47,14 @@
     <main>
         <section>
             <article>
-                <h3>Etiquetas Semánticas</h3>
+                <h3>CSS GRID</h3>
                 <br>
-                <p class="otros">En este espacio encontraremos información detallada de que las etiquetas semánticas y
-                    como nos ayudan para trabajar en la creación de una página web utilizando lenguaje HTML.</p>
+                <p class="otros">En este espacio se evidencia todo lo relacionado con la tematica CSS Grid</p>
             </article>
             <br>
 
             <article>
-                Aca deja la informacion sobre CSS GRID
+                <iframe src="docs/CSS Grid Layout.pdf" width="1000" height="300" frameborder="0"></iframe>
             </article>
         </section>
         <aside>
