--- a/index.html
+++ b/index.html
@@ -1,87 +1,36 @@
+
 <!DOCTYPE html>
 <html lang="en">
-
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Pagina Principal</title>
-    <link rel="stylesheet" href="css/styles.css">
+    <title>Document</title>
 </head>
-
-
 <body>
-    <div class="header">
-        <div class="div1">
-            <h1 style="text-align: center;">Proyecto De Sitio Web 2022 - 1604</h1>
+    <h1>Proyecto De Sitio Web 2022 - 1604</h1>
+    <h3>Nombre: Jaisson Oswaldo Rey Espinosa</h3>
+    <h3>Programa: Ingeniería De Sistemas</h3>
 
 
-            <h3 style="text-align: center;">Nombre: Jaisson Oswaldo Rey Espinosa</h3>
-            <h3 style="text-align: center;">Programa: Ingeniería De Sistemas</h3>
-        </div>
-    </div>
-    </div>
-    <nav>
-        <ul>
-            <li> <a href="index.html">Página Principal</a></li>
-            <li>Temas:
-                <ul>
-                    <li><a href="tema1.html">Etiquetas Semánticas</a></li>
-                    <li><a href="tema2.html">CSS Grid</a></li>
-                </ul>
-            </li>
-            <li>Recursos Digitales:
-                <ul>
-                    <li><a href="recurso1.html">Etiquetas Semánticas</a></li>
-                    <li><a href="recurso2.html">CSS Grid</a></li>
-                </ul>
-            </li>
-            <li>Aprendizaje:
-                <ul>
-                    <li>Actividad 1</li>
-                    <li>Actividad 2</li>
-                </ul>
-            </li>
-            <li>Acerca de:
-                <ul>
-                    <li><a href="autor.html">Autor página web</a></li>
-                </ul>
-            </li>
-        </ul>
-    </nav>
-    <main>
-        <section>
-            <article>
-                <h3>"Propósito del sitio"</h3>
-                <br>
-                <p class="otros">El propósito de este sitio es aprender mediante problemas de la vida real a comprender
-                    de una mejor manera temas como las etiquetas semánticas, CSS Grid</p>
-            </article>
-            <br>
 
-            <article>
-                <p class="otros">Con la realización de esta fase aprenderemos con ejemplo significativos como podemos
-                    usar estas herramientas para dar un mejor contorno a nuestra página web, paso a paso en la medida
-                    que avanzamos vemos una estructuración que es amena a los ojos del usuario que quiera utilizar
-                    nuestra página.</p>
-            </article>
-        </section>
-        <aside>
-            <div style="text-align: center;"> <iframe
-                    src="https://www.facebook.com/plugins/page.php?href=https%3A%2F%2Ffacebook.com%2FUniversidadUNAD%2F&tabs=timeline&width=340&height=500&small_header=false&adapt_container_width=true&hide_cover=false&show_facepile=true&appId"
-                    width="350" height="500" style="border:none;overflow:hidden" scrolling="no" frameborder="0"
-                    allowfullscreen="true"
-                    allow="autoplay; clipboard-write; encrypted-media; picture-in-picture; web-share"></iframe> </div>
-        </aside>
-    </main>
-    <footer>
-        <p><b>Página Web:</b><a
-                href="https://fabianykv.github.io/DSW-FabianGonzalez/">https://fabianykv.github.io/DSW-FabianGonzalez/</a><br>
-            <b>Ubicación:</b> Bogotá (Colombia)<br>
-            <b>© Copyright 2018 Todos los derechos reservados <br>
-                <b>Fecha:</b>18/10/2021
-        </p>
-    </footer>
+
+    <hr>
+    <p>Fecha: Agosto 29 de 2022 <br>
+
+        Telefono: 573008731881 <br>
+        Skype: Jaisson4178
+
+       
+    </p>
+
+    <p> Enlaces a las fases. <br>
+        <a href="fase2\design.html">Fase 2 </a><br>
+        <a href="fase3\index.html">Fase 3</a>
+    </p>
+    <hr>
+
+
 </body>
 
 </html>
