--- a/fase3/autor.html
+++ b/fase3/autor.html
@@ -15,10 +15,6 @@
             <h1>Estudiando Etiquetas semánticas, CSS Grid</h1>
 
         </div>
-        <div class="div2">
-            <img src="img/logo.png" alt="">
-        </div>
-    </div>
 
 
 
@@ -54,16 +50,16 @@
         <section>
             <article>
                 <h3>"Autor Página WEB"</h3>
-                <p class="otros"><b>Nombre:</b>Fabian Andrés González Fuentes<br>
-                    <b>Código :</b>1032386531 <br>
+                <p class="otros"><b>Nombre:</b>Jaisson Oswaldo Rey Espinosa<br>
+                    <b>Código :</b>1019031805 <br>
                     <b>Programa:</b>Ingeniería de Sistemas <br>
-                    <b>Correo:</b>fagonzalezfu@unadvirtul.edu.co<br>
-                    <b>Skype:</b>fabian426 <br>
+                    <b>Correo:</b>joreye@unadvirtul.edu.co<br>
+                    <b>Skype:</b>jaisson4178 <br>
                 </p>
             </article>
 
             <article>
-                <img src="img/My.jpg" width="250" height="200" alt="">
+                <img src="img/My.jpg" width="200" height="180" alt="">
             </article>
         </section>
         <aside>
