--- a/fase3/autor.html
+++ b/fase3/autor.html
@@ -16,6 +16,8 @@
 
         </div>
 
+    </div>
+
 
 
     <nav>
@@ -59,7 +61,7 @@
             </article>
 
             <article>
-                <img src="img/My.jpg" width="200" height="180" alt="">
+                <img src="img/My.jpg" width="250" height="200" alt="">
             </article>
         </section>
         <aside>
@@ -72,7 +74,7 @@
     </main>
     <footer>
         <p><b>Página Web:</b><a
-                href="https://jaissonrey.github.io/DSW_JaissonRey/">https://jaissonrey.github.io/DSW_JaissonRey//</a><br>
+                href="https://jaissonrey.github.io/DSW_JaissonRey/">https://jaissonrey.github.io/DSW_JaissonRey/</a><br>
             <b>Ubicación:</b> Bogotá (Colombia)<br>
             <b>© Copyright 2022 Todos los derechos reservados <br>
                 <b>Fecha:</b>22/10/2022
