--- a/fase3/index.html
+++ b/fase3/index.html
@@ -76,10 +76,10 @@
     </main>
     <footer>
         <p><b>Página Web:</b><a
-                href="https://fabianykv.github.io/DSW-FabianGonzalez/">https://fabianykv.github.io/DSW-FabianGonzalez/</a><br>
+            href="https://jaissonrey.github.io/DSW_JaissonRey/">https://jaissonrey.github.io/DSW_JaissonRey/</a><br>
             <b>Ubicación:</b> Bogotá (Colombia)<br>
-            <b>© Copyright 2018 Todos los derechos reservados <br>
-                <b>Fecha:</b>18/10/2021
+            <b>© Copyright 2022 Todos los derechos reservados <br>
+                <b>Fecha:</b>22/10/2022
         </p>
     </footer>
 </body>
