--- a/fase3/recurso2.html
+++ b/fase3/recurso2.html
@@ -71,7 +71,7 @@
     </main>
     <footer>
         <p><b>Página Web:</b><a
-                href="https://jaissonrey.github.io/DSW_JaissonRey/">https://jaissonrey.github.io/DSW_JaissonRey//</a><br>
+                href="https://jaissonrey.github.io/DSW_JaissonRey/">https://jaissonrey.github.io/DSW_JaissonRey/</a><br>
             <b>Ubicación:</b> Bogotá (Colombia)<br>
             <b>© Copyright 2022 Todos los derechos reservados <br>
                 <b>Fecha:</b>22/10/2022
