--- a/fase2/design.html
+++ b/fase2/design.html
@@ -82,7 +82,7 @@
     </main>
     <hr>
     <h2>Presentación Mockup</h2>
-    <img src="imagenes/Mockup.jpg" alt="Imagén que muestra diseño de Mockup con encabezado, barra de navegación, cuerpo, pie de página">
+    <img src="img/Mockup.jpg" alt="Imagén que muestra diseño de Mockup con encabezado, barra de navegación, cuerpo, pie de página">
     <br>
     <hr>
     <footer>
