--- a/fase2/design.html
+++ b/fase2/design.html
@@ -105,7 +105,7 @@
     </main>
     <hr>
     <h2>Presentación Mockup</h2>
-    <img src="img/Mockup.png"
+    <img src="img/Mockup.jpg"
         alt="Imagén que muestra diseño de Mockup con encabezado, barra de navegación, cuerpo, pie de página">
     <br>
     <hr>
