--- a/index.html
+++ b/index.html
@@ -27,6 +27,7 @@
     <p> Enlaces a las fases. <br>
         <a href="fase2\design.html">Fase 2 </a><br>
         <a href="fase3\index.html">Fase 3</a>
+        <a href="fase4/index.html">Fase 4</a>
     </p>
     <hr>
 
