--- a/fase4/Aprendizaje1.html
+++ b/fase4/Aprendizaje1.html
@@ -7,7 +7,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Pagina Principal</title>
     <link rel="stylesheet" href="css/styles.css">
-
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-Zenh87qX5JnK2Jl0vWa8Ck2rdkQ2Bzep5IDxbcnCeuOxjzrPF/et3URy9Bv1WTRi" crossorigin="anonymous">
+  </head>
+    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.6/dist/umd/popper.min.js" integrity="sha384-oBqDVmMz9ATKxIep9tiCxS/Z9fNfEXiDAYTujMAeBAsjFuCZSmKbSSUnQlmh/jp3" crossorigin="anonymous"></script>
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/js/bootstrap.min.js" integrity="sha384-IDwe1+LCz02ROU9k972gdyvl+AESN10+x7tBKgc9I5HFtuNz0wWnPclzo6p9vxnk" crossorigin="anonymous"></script>
 </head>
 
 
@@ -24,11 +27,6 @@
     </div>
     <nav class="navbar navbar-expand-lg bg-light">
         <div class="container-fluid">
-            <a class="navbar-brand" href="#">Navbar</a>
-            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavDropdown"
-                aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
-                <span class="navbar-toggler-icon"></span>
-            </button>
             <div class="collapse navbar-collapse" id="navbarNavDropdown">
                 <ul class="navbar-nav">
                     <li class="nav-item">
@@ -75,19 +73,11 @@
     <main>
         <section>
             <article>
-                <h3>"Propósito del sitio"</h3>
+                <h3>"QUIZ "</h3>
                 <br>
-                <p class="otros">El propósito de este sitio es aprender mediante problemas de la vida real a comprender
-                    de una mejor manera temas como las etiquetas semánticas, CSS Grid</p>
-            </article>
+                <iframe src="https://docs.google.com/forms/d/e/1FAIpQLSebJNI63mzDPPfUrgmpLUyynAhEh4HVrEWSNuY-gJOFt-60UQ/viewform?embedded=true" width="640" height="1106" frameborder="0" marginheight="0" marginwidth="0">Cargando…</iframe>
+                        </article>
             <br>
-
-            <article>
-                <p class="otros">Con la realización de esta fase aprenderemos con ejemplo significativos como podemos
-                    usar estas herramientas para dar un mejor contorno a nuestra página web, paso a paso en la medida
-                    que avanzamos vemos una estructuración que es amena a los ojos del usuario que quiera utilizar
-                    nuestra página.</p>
-            </article>
         </section>
         <aside>
             <div style="text-align: center;"> <iframe
