--- a/fase4/tema2.html
+++ b/fase4/tema2.html
@@ -58,19 +58,17 @@
             </article>
         </section>
         <aside>
-            <div style="text-align: center;"> <iframe
-                    src="https://www.facebook.com/plugins/page.php?href=https%3A%2F%2Ffacebook.com%2FUniversidadUNAD%2F&tabs=timeline&width=340&height=500&small_header=false&adapt_container_width=true&hide_cover=false&show_facepile=true&appId"
-                    width="350" height="500" style="border:none;overflow:hidden" scrolling="no" frameborder="0"
-                    allowfullscreen="true"
-                    allow="autoplay; clipboard-write; encrypted-media; picture-in-picture; web-share"></iframe> </div>
+            <a class="twitter-timeline" href="https://twitter.com/UniversidadUNAD?ref_src=twsrc%5Etfw">Tweets by
+                UniversidadUNAD</a>
+            <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
         </aside>
     </main>
     <footer>
         <p><b>Página Web:</b><a
-            href="https://jaissonrey.github.io/DSW_JaissonRey/">https://jaissonrey.github.io/DSW_JaissonRey/</a><br>
-        <b>Ubicación:</b> Bogotá (Colombia)<br>
-        <b>© Copyright 2022 Todos los derechos reservados <br>
-            <b>Fecha:</b>22/10/2022
+                href="https://jaissonrey.github.io/DSW_JaissonRey/">https://jaissonrey.github.io/DSW_JaissonRey/</a><br>
+            <b>Ubicación:</b> Bogotá (Colombia)<br>
+            <b>© Copyright 2022 Todos los derechos reservados <br>
+                <b>Fecha:</b>22/10/2022
         </p>
     </footer>
 </body>
